2023-12-21T16:19:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7290635839 # 2189
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-21
* notice: last 14d: unq all: 14 40
* notice: prev accum: outdated-unq outdated-all / unq all: 505 2702 / 520 2743
* notice: next accum: outdated-unq outdated-all / unq all: 506 2703 / 520 2743
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-07] / []

2023-12-20T16:18:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7278031659 # 2186
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-20
* notice: last 14d: unq all: 15 41
* notice: prev accum: outdated-unq outdated-all / unq all: 503 2700 / 520 2743
* notice: next accum: outdated-unq outdated-all / unq all: 505 2702 / 520 2743
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-06] / []

2023-12-20T00:55:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7269495899 # 2184
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-20
* notice: last 14d: unq all: 17 43
* notice: prev accum: outdated-unq outdated-all / unq all: 501 2680 / 520 2743
* notice: next accum: outdated-unq outdated-all / unq all: 503 2700 / 520 2743
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-05] / []

2023-12-19T01:07:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7255944490 # 2181