@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-12-21T16:19:09Z",
-  "count_outdated" : 2703,
-  "uniques_outdated" : 506,
+  "timestamp" : "2023-12-23T08:17:45Z",
+  "count_outdated" : 2704,
+  "uniques_outdated" : 507,
   "count" : 2743,
   "uniques" : 520,
   "views" : [
-    {
-      "timestamp": "2023-12-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-12-11T00:00:00Z",
       "count": 1,
