@@ -1,3 +1,12 @@
+2023-12-23T08:17:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7307146236 # 2194
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-23
+* notice: last 14d: unq all: 13 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 506 2703 / 520 2743
+* notice: next accum: outdated-unq outdated-all / unq all: 507 2704 / 520 2743
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-12-09] / []
+
 2023-12-21T16:19:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7290635839 # 2189
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-21
